<resources>
    <string name="app_name">Fona Calculator</string>
    <string name="splash_name">Fona\nCalculator</string>
    <string name="menu">Menu</string>
    <string name="text_splash">Please accept our\nprivacy policy to start\nan app</string>
    <string name="accept">Accept</string>
    <string name="calculate">Calculate</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="choose_color">Choose color</string>
    <string name="desc">color</string>
    <string name="save">SAVE</string>
    <string name="enter_a_value">"Enter a value "</string>
    <string name="saved_counts">Saved counts</string>
</resources>