<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_1"
    tools:context=".ui.SettingsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_arraw_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_700"
        android:gravity="center"
        android:text="@string/choose_color"
        android:textColor="@color/white"
        android:textSize="@dimen/_28sdp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_splash_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_color_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_1" />

            <ImageButton
                android:id="@+id/btn_color_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_2" />

            <ImageButton
                android:id="@+id/btn_color_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_3" />

            <ImageButton
                android:id="@+id/btn_color_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_color_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_5" />

            <ImageButton
                android:id="@+id/btn_color_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_6" />

            <ImageButton
                android:id="@+id/btn_color_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_7" />

            <ImageButton
                android:id="@+id/btn_color_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_color_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_9" />

            <ImageButton
                android:id="@+id/btn_color_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_10" />

            <ImageButton
                android:id="@+id/btn_color_11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_11" />

            <ImageButton
                android:id="@+id/btn_color_12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_color_12" />

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_34sdp"
        android:background="@drawable/rounded_background_1"
        android:fontFamily="@font/manrope_700"
        android:paddingStart="@dimen/_27sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingEnd="@dimen/_27sdp"
        android:paddingBottom="@dimen/_4sdp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>